llvm-toolchain-3.8 (1:3.8.1-6) unstable; urgency=medium

  * Sync from Ubuntu. Many thanks to Matthias Klose
    - drop-avx512-from-skylake.diff: Don't enable AVX512 on Skylake, as it's
      a server cpu feature and breaks llvmpipe on workstations.
    - Remove the build tree before calling dh_strip; at least the amd64 buildd
      runs out of diskspace at this step.
    - Add support for gcc's attribute abi_tag (needed for compatibility with
      GCC 5's libstdc++); taken from the trunk (Closes: #797038)
      (LP: #1510042, #1488254)
      D17567-PR23529-Sema-part-of-attrbute-abi_tag-support.diff
      D18035-PR23529-Mangler-part-of-attrbute-abi_tag-support.diff

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 28 Jul 2016 11:15:04 +0200

llvm-toolchain-3.8 (1:3.8.1-5) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * Try to fix mips64el build, by enabling the same
    packages as the mips and mipsel versions
  * Link mips* with latomic.

  [ Sylvestre Ledru ]
  * Disable lldb on sparc64 (Closes: #832371)
  * Hopefully fix the FTBFS on armel

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 27 Jul 2016 22:49:09 +0200

llvm-toolchain-3.8 (1:3.8.1-4) unstable; urgency=medium

  * Fix the FTBFS under mips/mipsel? (enable the link against atomic)
    (Closes: #820537)
  * Bring back llvm-3.8-tools to life
  * ship clang-tblgen & yaml-bench as part of the libclang-common-X.Y-dev
    package

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 20 Jul 2016 10:20:46 +0200

llvm-toolchain-3.8 (1:3.8.1-3) unstable; urgency=medium

  * Add -gsplit-dwarf to CXXFLAGS to workaround the memory allocation
    issue on i386 (hopefully)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 02 Jul 2016 20:59:08 +0200

llvm-toolchain-3.8 (1:3.8.1-2) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Add a symlink from usr/lib/llvm-3.8/share/llvm/cmake
    pointing to usr/share/llvm-3.8/cmake

  [ Gianfranco Costamagna ]