@@ -1,5 +1,6 @@
 llvm-toolchain-3.8 (1:3.8.1-6) unstable; urgency=medium
 
+  * Ship libFuzzer in its own package (libfuzzer-X.Y-dev) (Closes: #820159)
   * Sync from Ubuntu. Many thanks to Matthias Klose
     - drop-avx512-from-skylake.diff: Don't enable AVX512 on Skylake, as it's
       a server cpu feature and breaks llvmpipe on workstations.
